# hello-rust

./: Cargo.toml
resources/: sample.txt
src/: count_words.rs  data_science.rs  main.rs  memory_alignment.rs  open_gl.rs
