[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2.1"
walkdir = "2.3.2"
rayon = "1.5.3"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
noisy_float = "0.2.0"
poloto = "2.17.0"
glutin = "0.29.1"
gl = "0.14.0"
thiserror = "1.0.35"